changed image file path

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
             <section class="container" id="worksection">
                 <h2>My Work</h2>
                 <a href="https://github.com/zyzix564" class="projectimage">
-                    <img src="/images/tennisracquet.jpg" title="Tennis Performance Tracker App" alt="a tennis racquet and ball">
+                    <img src="./images/tennisracquet.jpg" title="Tennis Performance Tracker App" alt="a tennis racquet and ball">
                 </a>
                 <a href="https://github.com/zyzix564" class="projectimage">
-                    <img src="/images/swimmingpool.jpg" title="Local Pool locater App" alt="a competition swimming pool" width="350px">
+                    <img src="./images/swimmingpool.jpg" title="Local Pool locater App" alt="a competition swimming pool" width="350px">
                 <a href="https://github.com/zyzix564" class="projectimage">
-                    <img src="/images/guitars.jpg" title="Guitar Shop Webpage" alt="a grouping of cool guitars" width="200px">
+                    <img src="./images/guitars.jpg" title="Guitar Shop Webpage" alt="a grouping of cool guitars" width="200px">
                 </section>
 
             <section class = "container" id="aboutmesection">
                 <h2>About Me</h2>
-                <img src="/images/hatselfie.jpg" style="height:255px" alt="Thomas wearing a hat and a smile">
+                <img src="./images/hatselfie.jpg" style="height:255px" alt="Thomas wearing a hat and a smile">
                 <p> Hello! I'm Thomas Carroll and I am a web developer. I grew up in Southern California and graduated from U.C. Berkeley with a degree in English in 2009. My hobbies include tennis, swimming, guitar, and video gaming.</p>
             </section>
             
