added comments in HTML and CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </ul>
                 </nav>
             </section>
-            
+            <!-- This section displays my super impressive projects -->
             <section class="container" id="worksection">
                 <h2>My Work</h2>
                 <a href="https://github.com/zyzix564" class="projectimage">
@@ -31,13 +31,13 @@
                 <a href="https://github.com/zyzix564" class="projectimage">
                     <img src="./images/guitars.jpg" title="Guitar Shop Webpage" alt="a grouping of cool guitars" width="200px">
                 </section>
-
+            <!-- This section introduces who I am as a human being -->
             <section class = "container" id="aboutmesection">
                 <h2>About Me</h2>
                 <img src="./images/hatselfie.jpg" style="height:255px" alt="Thomas wearing a hat and a smile">
                 <p> Hello! I'm Thomas Carroll and I am a web developer. I grew up in Southern California and graduated from U.C. Berkeley with a degree in English in 2009. My hobbies include tennis, swimming, guitar, and video gaming.</p>
             </section>
-            
+            <!-- This section tells potential clients how they can reach me for paid work -->
             <section class="container" id="contactmesection">
                 <h2>Contact Me</h2>
                 <p>Email: cool_developer@gmail.com</p>
